Added database connections and queries to backend services